Fixed text overflow on small screens & made about me easier to read
Small screen = my 13 inch chromebook.
Easier to read = feedback from MrVoo: `The typing effect makes that block hard to read, and "Netherlands" is smaller text than the rest :P`

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -400,6 +400,7 @@ img.bounceNOW {
 }
 
 .hero-section {
+  overflow-wrap: break-word;
   align-items: flex-start;
   display: flex;
   min-height: 100%;
@@ -478,6 +479,7 @@ img.bounceNOW {
 }
 
 .card__heading {
+  overflow-wrap: break-word;
   color: var(--text-lighter);
   font-size: 1.9rem;
   text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
@@ -872,28 +874,8 @@ raadsel {
   position: relative;
 }
 
-.magic > .magic-star {
-  --size: clamp(20px, 1.5vw, 30px);
-  
-  animation: scale 700ms ease forwards;
-  display: block;
-  height: var(--size);
-  left: var(--star-left);
-  position: absolute;
-  top: var(--star-top);
-  width: var(--size);
-}
-.magic > .magic-star > svg {
-  animation: rotate 1000ms linear infinite;
-  display: block;
-  opacity: 0.7;
-}
-
-.magic > .magic-star > svg > path {
-  fill: var(--violet);
-}
-
 .magic > .magic-text {
+  font-size: 1.2em;
   animation: background-pan 3s linear infinite;
   background: linear-gradient(
     to right,
